# eve-lp-optimizer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  run-cli.bat  run-cli.sh  run-gui.bat  run-gui.sh
.claude/: CLAUDE.md
eve_lp/: __init__.py  __main__.py  cli.py  esi.py  gui.py  market.py  optimizer.py
